@@ -1,3 +1,12 @@
+2008-08-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Don't download and extract when an external source dir is
+	specified.  Instead, obtain a local copy of the tree.
+	* acinclude.m4:
+	Use a more meaningful name for the OpenJDK srcdir
+	conditional.
+	
 2008-07-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
